--- a/products/product-category-1/product-3.html
+++ b/products/product-category-1/product-3.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="../../css/default.css">
   <link rel="stylesheet" href="../../css/SW22-01-B.css">
+  <link rel="stylesheet" href="../../css/SW06-01-B.css">
   <link rel="stylesheet" href="../../css/SW01-01-B.css">
   <link rel="stylesheet" href="../../css/SW20-01.css">
 </head>
@@ -77,64 +78,63 @@
   </nav>
 
 
-  <section id="SW22-01-B">
-    <div class="SW22-01-B-nav">
-      <div id="accordion" class="SW22-01-B-nav-card">
-        <div class="SW22-01-B-nav-title">
-          <h3>Products Album</h3>
+<section id="SW06-01-B">
+  <div class="SW06-01-B-nav">
+    <div id="accordion" class="SW06-01-B-nav-card">
+      <div class="SW06-01-B-nav-title">
+        <h3>Products</h3>
+      </div>
+      <div class="SW06-01-B-nav-card-div">
+        <div class="" id="headingOne">
+
+          <button class="SW06-01-B-nav-card-category" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Product Category
+          </button>
+
         </div>
-        <div class="SW22-01-B-nav-card-div">
-          <div class="" id="headingOne">
 
-            <button class="SW22-01-B-nav-card-category" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Product Category
-            </button>
-
-          </div>
-
-          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-            <ul class="SW22-01-B-nav-ul">
-              <li><a href="/products/product-category-1/product-1.html">Product name</a></li>
-              <li><a href="/products/product-category-1/product-1.html">Product name</a></li>
-              <li><a href="/products/product-category-1/product-1.html">Product name</a></li>
-            </ul>
-          </div>
+        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+          <ul class="SW06-01-B-nav-ul">
+            <li><a href="/products/product-category-1/product-1.html" class="SW22-01-B-active-product-name">Product name</a></li>
+            <li><a href="/products/product-category-1/product-1.html">Product name</a></li>
+            <li><a href="/products/product-category-1/product-1.html">Product name</a></li>
+          </ul>
         </div>
-        <div class="SW22-01-B-nav-card-div">
-          <div class="" id="headingTwo">
+      </div>
+      <div class="SW06-01-B-nav-card-div">
+        <div class="" id="headingTwo">
 
-            <button class="SW22-01-B-nav-card-category collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Product Category
-            </button>
+          <button class="SW06-01-B-nav-card-category collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Product Category
+          </button>
 
-          </div>
-          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-            <ul class="SW22-01-B-nav-ul">
-              <li><a href="/products/product-category-2/product-1.html">Product name</a></li>
-              <li><a href="/products/product-category-2/product-1.html">Product name</a></li>
-              <li><a href="/products/product-category-2/product-1.html">Product name</a></li>
-            </ul>
-          </div>
         </div>
-        <div class="SW22-01-B-nav-card-div">
-          <div class="" id="headingThree">
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+          <ul class="SW06-01-B-nav-ul">
+            <li><a href="/products/product-category-2/product-1.html">Product name</a></li>
+            <li><a href="/products/product-category-2/product-1.html">Product name</a></li>
+            <li><a href="/products/product-category-2/product-1.html">Product name</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="SW06-01-B-nav-card-div">
+        <div class="" id="headingThree">
 
-            <button class="SW22-01-B-nav-card-category collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Product Category
-            </button>
+          <button class="SW06-01-B-nav-card-category collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Product Category
+          </button>
 
-          </div>
-          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-            <ul class="SW22-01-B-nav-ul">
-              <li><a href="/products/product-category-3/product-1.html">Product name</a></li>
-              <li><a href="/products/product-category-3/product-1.html">Product name</a></li>
-              <li><a href="/products/product-category-3/product-1.html">Product name</a></li>
-            </ul>
-          </div>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+          <ul class="SW06-01-B-nav-ul">
+            <li><a href="/products/product-category-3/product-1.html">Product name</a></li>
+            <li><a href="/products/product-category-3/product-1.html">Product name</a></li>
+            <li><a href="/products/product-category-3/product-1.html">Product name</a></li>
+          </ul>
         </div>
       </div>
     </div>
-
+  </div>
     <!-- Product item section   -->
     <div class="SW22-01-B-products">
       <!-- Start your code here -->
@@ -151,7 +151,7 @@
         <h1>Brass Inserts</h1>
         <table id="SW22-01-B-products-details-pricing" class="SW22-01-B-products-details-normal-text">
           <tr>
-            <td>Prices</td>
+            <td>Quantity</td>
             <td>10-100</td>
             <td>101-1000</td>
           </tr>
@@ -186,9 +186,35 @@
             <td>Spec details</td>
           </tr>
         </table>
-        <div class="SW22-01-B-products-quote-btn">Request Quote</div>
+        <div class="SW22-01-B-products-quote-btn" onclick="requestQuote()">Request Quote</div>
       </div>
     </div>
+    <div class="SW22-01-B-RQ">
+      <h2>Request Quote</h2>
+      <p>Product Id: <span>100025</span></p>
+      <form id="SW22-01-B-RQ-form" action="https://formsubmit.co/smartoreach@gmail.com" method="post" name="contact-form">
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_next" value="https://mtemp.smartoreach.com/products/product-category-1/product-1.html#">
+
+        <input type="text" name="name" value="" placeholder="Name *" class="SW22-01-B-RQ-name" required>
+        <input type="tel" name="phone" value="" placeholder="Mobile number *" class="SW22-01-B-RQ-phone" required>
+        <input type="email" name="email" value="" placeholder="Email" class="SW22-01-B-RQ-email">
+        <input type="hidden" name="product-id" value="100025">
+        <br>
+        <!-- <select class="SW22-01-B-RQ-select" name="">
+          <option value="">I</option>
+          <option value="">A</option>
+          <option value="">F</option>
+          <option value="">E</option>
+        </select>
+        <p class="SW22-01-B-RQ-countrycode">+91</p> -->
+        <div class="SW22-01-B-RQ-btn">
+          <button type="submit" id="SW22-01-B-RQ-confirm-btn">Confirm</button>
+          <a href="#" id="SW22-01-B-RQ-cancel-btn" onclick="cancelButton()">Cancel</a>
+        </div>
+      </form>
+    </div>
+
   </section>
 
   <footer id="SW20-01">
@@ -198,7 +224,7 @@
         <ul>
           <li><a href="/"> Home</a> </li>
           <li><a href="/about"> About</a> </li>
-          <li><a href="/contact"> Contact</a> </li>
+          <li><a href="/contact"> Contact us</a> </li>
         </ul>
       </div>
       <div class="SW20-01-products">
@@ -216,6 +242,7 @@
           <li><a href="/services/service-category-1"> Text</a> </li>
           <li><a href="/services/service-category-1"> Text</a> </li>
         </ul>
+
       </div>
       <div class="SW20-01-empty">
 
@@ -248,6 +275,27 @@
     </div>
   </footer>
 
+  <section id="smartoreach-footer">
+    <style media="screen">
+      #smartoreach-footer  {
+        background-color: rgb(250,250,250);
+        padding: 20px;
+      }
+      #smartoreach-footer h3 {
+        margin: 0;
+        text-align: center;
+        font-size: 0.8rem;
+        font-weight: normal;
+        letter-spacing: 0.2rem;
+        color: rgb(64, 64, 64);
+      }
+      #smartoreach-footer a {
+        text-decoration: none;
+      }
+    </style>
+    <h3>© 2021 Company name | ⚡ by <a target="_blank" href="https://smartoreach.com/">SmartOreach</a> </h3>
+  </section>
+
   <!-- google sheet -->
   <script>
              const scriptURL = 'https://script.google.com/macros/s/AKfycbyuMj5UxnGLV2nu4KGpjDMG4choZcN0mSa5KCYcb3q2w9tk5T27blaz/exec'
@@ -261,11 +309,14 @@
              })
    </script>
 
+
   <!-- Bootstrap cdn -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="../../js/SW22-01.js"></script>
+  <!-- <script src="../../js/SW22-01.js"></script> -->
+  <script src="../../js/SW22-01-B.js" charset="utf-8"></script>
+
 </body>
 
 </html>
