--- a/services/service-category-2/index.html
+++ b/services/service-category-2/index.html
@@ -1,16 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SW01-01-B</title>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <title>SW25-01</title>
   <!-- Bootstrap cdn -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="../../css/default.css">
+  <link rel="stylesheet" href="../../css/SW22-01-B.css">
   <link rel="stylesheet" href="../../css/SW06-01-B.css">
   <link rel="stylesheet" href="../../css/SW01-01-B.css">
   <link rel="stylesheet" href="../../css/SW20-01.css">
+  <link rel="stylesheet" href="../../css/SW23-01.css">
+  <link rel="stylesheet" href="../../css/SW25-01.css">
 </head>
 
 <body>
@@ -45,7 +50,7 @@
             <a class="dropdown-item" href="/contact">Contact Information</a>
           </div>
         </li>
-        <li class="nav-item dropdown  active">
+        <li class="nav-item dropdown">
           <a class="nav-link " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Products
           </a>
@@ -55,7 +60,7 @@
             <a class="dropdown-item" href="/products/product-category-3">Product 3</a>
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown active">
           <a class="nav-link " href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Services
           </a>
@@ -76,116 +81,121 @@
   </nav>
 
 
-  <section id="SW06-01-B">
-    <div class="SW06-01-B-nav">
-      <div id="accordion" class="SW06-01-B-nav-card">
-        <div class="SW06-01-B-nav-title">
-          <h3>Products</h3>
+<section id="SW06-01-B">
+  <div class="SW06-01-B-nav">
+    <div id="accordion" class="SW06-01-B-nav-card">
+      <div class="SW06-01-B-nav-title">
+        <h3>Services</h3>
+      </div>
+      <div class="SW06-01-B-nav-card-div">
+        <div class="" id="headingOne">
+
+          <button class="SW06-01-B-nav-card-category" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Service Category
+          </button>
+
         </div>
-        <div class="SW06-01-B-nav-card-div">
-          <div class="" id="headingOne">
 
-            <button class="SW06-01-B-nav-card-category collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-              Product Category
-            </button>
-
-          </div>
-
-          <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-            <ul class="SW06-01-B-nav-ul">
-              <li><a href="/products/product-category-1/product-1.html">Product name</a></li>
-              <li><a href="/products/product-category-1/product-1.html">Product name</a></li>
-              <li><a href="/products/product-category-1/product-1.html">Product name</a></li>
-            </ul>
-          </div>
+        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+          <ul class="SW06-01-B-nav-ul">
+            <li><a href="/services/service-category-1/service-1.html" class="SW22-01-B-active-product-name">Service name</a></li>
+            <li><a href="/services/service-category-1/service-1.html">Service name</a></li>
+            <li><a href="/services/service-category-1/service-1.html">Service name</a></li>
+          </ul>
         </div>
-        <div class="SW06-01-B-nav-card-div">
-          <div class="" id="headingTwo">
+      </div>
+      <div class="SW06-01-B-nav-card-div">
+        <div class="" id="headingTwo">
 
-            <button class="SW06-01-B-nav-card-category collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Product Category
-            </button>
+          <button class="SW06-01-B-nav-card-category collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Service Category
+          </button>
 
-          </div>
-          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-            <ul class="SW06-01-B-nav-ul">
-              <li><a href="/products/product-category-2/product-1.html">Product name</a></li>
-              <li><a href="/products/product-category-2/product-1.html">Product name</a></li>
-              <li><a href="/products/product-category-2/product-1.html">Product name</a></li>
-            </ul>
-          </div>
         </div>
-        <div class="SW06-01-B-nav-card-div">
-          <div class="" id="headingThree">
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+          <ul class="SW06-01-B-nav-ul">
+            <li><a href="/services/service-category-2/service-1.html">Service name</a></li>
+            <li><a href="/services/service-category-2/service-1.html">Service name</a></li>
+            <li><a href="/services/service-category-2/service-1.html">Service name</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="SW06-01-B-nav-card-div">
+        <div class="" id="headingThree">
 
-            <button class="SW06-01-B-nav-card-category" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-              Product Category
-            </button>
+          <button class="SW06-01-B-nav-card-category collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Service Category
+          </button>
 
-          </div>
-          <div id="collapseThree" class="collapse show" aria-labelledby="headingThree" data-parent="#accordion">
-            <ul class="SW06-01-B-nav-ul">
-              <li><a href="/products/product-category-3/product-1.html">Product name</a></li>
-              <li><a href="/products/product-category-3/product-1.html">Product name</a></li>
-              <li><a href="/products/product-category-3/product-1.html">Product name</a></li>
-            </ul>
-          </div>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+          <ul class="SW06-01-B-nav-ul">
+            <li><a href="/services/service-category-1/service-1.html" >Service name</a></li>
+            <li><a href="/services/service-category-1/service-1.html">Service name</a></li>
+            <li><a href="/services/service-category-1/service-1.html">Service name</a></li>
+          </ul>
         </div>
       </div>
     </div>
-
-    <div class="SW06-01-B-products">
-      <div class="SW06-01-B-grid">
-
-        <a href="/products/product-category-1/product-1.html">
-          <div class="SW06-01-B-card">
-            <div class="SW06-01-B-img">
-              <img src="https://dummyimage.com/500x500/ddd/fff&text=Image" alt="">
-            </div>
-            <h3>Product Name</h3>
-            <h4>$200 - $700</h4>
-            <p><span>MOQ:</span> 100 pieces</p>
-          </div>
-        </a>
-
-        <a href="/products/product-category-1/product-1.html">
-          <div class="SW06-01-B-card">
-            <div class="SW06-01-B-img">
-              <img src="https://dummyimage.com/500x500/ddd/fff&text=Image" alt="">
-            </div>
-            <h3>Product Name</h3>
-            <h4>$200 - $700</h4>
-            <p><span>MOQ:</span> 100 pieces</p>
-          </div>
-        </a>
-
-        <a href="/products/product-category-1/product-1.html">
-          <div class="SW06-01-B-card">
-            <div class="SW06-01-B-img">
-              <img src="https://dummyimage.com/500x500/ddd/fff&text=Image" alt="">
-            </div>
-            <h3>Product Name</h3>
-            <h4>$200 - $700</h4>
-            <p><span>MOQ:</span> 100 pieces</p>
-          </div>
-        </a>
+  </div>
+    <!-- Product category section   -->
+    <div class="SW23-01-container">
 
 
-        <a href="/products/product-category-1/product-1.html">
-          <div class="SW06-01-B-card">
-            <div class="SW06-01-B-img">
-              <img src="https://dummyimage.com/500x500/ddd/fff&text=Image" alt="">
-            </div>
-            <h3>Product Name</h3>
-            <h4>$200 - $700</h4>
-            <p><span>MOQ:</span> 100 pieces</p>
-          </div>
-        </a>
+    <div class="SW23-01-grid">
 
+      <a href="./service-1.html">
+      <div class="SW23-01-card">
+        <div class="SW23-01-img">
+          <img src="https://dummyimage.com/500x500/ddd/fff&text=Image" alt="">
+        </div>
+        <h3>Service Name</h3>
+        <p>Description</p>
+        <!-- <div class="SW23-01-btn">
+          <a class="" href="#">See More</a>
+        </div> -->
+      </div></a>
 
-      </div>
+      <a href="./service-1.html">
+      <div class="SW23-01-card">
+        <div class="SW23-01-img">
+          <img src="https://dummyimage.com/500x500/ddd/fff&text=Image" alt="">
+        </div>
+        <h3>Service Name</h3>
+        <p>Description</p>
+        <!-- <div class="SW23-01-btn">
+          <a class="" href="#">See More</a>
+        </div> -->
+      </div></a>
+
+      <a href="./service-1.html">
+      <div class="SW23-01-card">
+        <div class="SW23-01-img">
+          <img src="https://dummyimage.com/500x500/ddd/fff&text=Image" alt="">
+        </div>
+        <h3>Service Name</h3>
+        <p>Description</p>
+        <!-- <div class="SW23-01-btn">
+          <a class="" href="#">See More</a>
+        </div> -->
+      </div></a>
+
+      <a href="./service-1.html">
+      <div class="SW23-01-card">
+        <div class="SW23-01-img">
+          <img src="https://dummyimage.com/500x500/ddd/fff&text=Image" alt="">
+        </div>
+        <h3>Service Name</h3>
+        <p>Description</p>
+        <!-- <div class="SW23-01-btn">
+          <a class="" href="#">See More</a>
+        </div> -->
+      </div></a>
+
 
     </div>
+    </div>
+
   </section>
 
   <footer id="SW20-01">
@@ -267,10 +277,13 @@
     <h3>© 2021 Company name | ⚡ by <a target="_blank" href="https://smartoreach.com/">SmartOreach</a> </h3>
   </section>
 
+
   <!-- Bootstrap cdn -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <!-- <script src="./js/SW22-01.js"></script> -->
+  <script src="../js/SW25-01.js" charset="utf-8"></script>
 
 </body>
 
