--- a/products/product-category-1/index.html
+++ b/products/product-category-1/index.html
@@ -108,7 +108,7 @@
         <a href="/products/product-category-1/product-1.html">
           <div class="SW06-01-B-card">
             <div class="SW06-01-B-img">
-              <img src="https://dummyimage.com/500x500/ddd/fff&text=Image" alt="">
+              <img src="/images/PC1_Item_1.png" alt="">
             </div>
             <h3>Product Name</h3>
             <h4>$200 - $700</h4>
@@ -119,7 +119,7 @@
         <a href="/products/product-category-1/product-1.html">
           <div class="SW06-01-B-card">
             <div class="SW06-01-B-img">
-              <img src="https://dummyimage.com/500x500/ddd/fff&text=Image" alt="">
+              <img src="/images/PC1_Item_2.png" alt="">
             </div>
             <h3>Product Name</h3>
             <h4>$200 - $700</h4>
@@ -130,19 +130,7 @@
         <a href="/products/product-category-1/product-1.html">
           <div class="SW06-01-B-card">
             <div class="SW06-01-B-img">
-              <img src="https://dummyimage.com/500x500/ddd/fff&text=Image" alt="">
-            </div>
-            <h3>Product Name</h3>
-            <h4>$200 - $700</h4>
-            <p><span>MOQ:</span> 100 pieces</p>
-          </div>
-        </a>
-
-
-        <a href="/products/product-category-1/product-1.html">
-          <div class="SW06-01-B-card">
-            <div class="SW06-01-B-img">
-              <img src="https://dummyimage.com/500x500/ddd/fff&text=Image" alt="">
+              <img src="/images/PC1_Item_2.png" alt="">
             </div>
             <h3>Product Name</h3>
             <h4>$200 - $700</h4>
